BuildHughes/translation-tool/inputs/source_meta/objects/OfferMgmt_Generic_Offer_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>allowMultiple__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allowMultiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <inlineHelpText>Must match with Customer Billing Spec Template.Customer Product.Product.Product Family for same Product Type on Customer Billing Spec Template(Like Support) else same as Product Type</inlineHelpText>
        <label>key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mandatoryOfferType__c</fullName>
        <inlineHelpText>Display the offer Line Item as mandatory</inlineHelpText>
        <label>mandatoryOfferType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productType__c</fullName>
        <inlineHelpText>Must match with the Product Type of Customer Billing Spec Template</inlineHelpText>
        <label>productType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>showAdditional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showAdditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showCommitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showCommitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showPromotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showPromotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>showPurchaseLease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showPurchaseLease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>translation__c</fullName>
        <label>translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visibleOfferType__c</fullName>
        <inlineHelpText>Displays the Offer Line Item on UI</inlineHelpText>
        <label>visibleOfferType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OfferMgmt Generic Offer Item</label>
</CustomObject>